added support for a multistage workflow

--- a/dbx/templates/projects/guardian_pipeline/components/conf/deployment.yml
+++ b/dbx/templates/projects/guardian_pipeline/components/conf/deployment.yml
@@ -20,28 +20,27 @@ environments:
       #######################################################################################
       #   Example workflow for integration tests                                            #
       #######################################################################################
-      - name: "{{project_name}}-sample-tests"
+      - name: "{{project_name}}-sample-etl"
         tasks:
           - task_key: "main"
             <<: *basic-static-cluster
-            spark_python_task:
-                python_file: "file://tests/entrypoint.py"
-                # this call supports all standard pytest arguments
-                parameters: ["file:fuse://tests/integration", "--cov={{project_slug}}"]
-
+            python_wheel_task:
+              package_name: "{{project_slug}}"
+              entry_point: "{{project_slug}}.{{pipeline_slug}}" # take a look at the setup.py entry_points section for details on how to define an entrypoint
+              parameters: ["--conf-file", "file:fuse://{{project_slug}}/{{pipeline_slug}}/conf/tasks/sample_etl_config.yml", "--env", "qa"]
   prod:
     workflows:
       #######################################################################################
       #   Example workflow for integration tests                                            #
       #######################################################################################
-      - name: "{{project_name}}-sample-tests"
+      - name: "{{project_name}}-sample-etl"
         tasks:
           - task_key: "main"
             <<: *basic-static-cluster
-            spark_python_task:
-                python_file: "file://tests/entrypoint.py"
-                # this call supports all standard pytest arguments
-                parameters: ["file:fuse://tests/integration", "--cov={{project_slug}}"]
+            python_wheel_task:
+              package_name: "{{project_slug}}"
+              entry_point: "{{project_slug}}.{{pipeline_slug}}" # take a look at the setup.py entry_points section for details on how to define an entrypoint
+              parameters: ["--conf-file", "file:fuse://{{project_slug}}/{{pipeline_slug}}/conf/tasks/sample_etl_config.yml", "--env", "prod"]
   default:
     workflows:
       #######################################################################################
@@ -59,45 +58,29 @@ environments:
       # this is an example job with single ETL task based on 2.1 API and wheel_task format #
       ######################################################################################
       - name: "{{project_name}}-sample-etl"
-        tasks:
-          - task_key: "main"
+        job_clusters:
+          - job_cluster_key: "default"
             <<: *basic-static-cluster
+        tasks:
+          - task_key: "etl_raw"
+            job_cluster_key: "default"
             python_wheel_task:
               package_name: "{{project_slug}}"
-              entry_point: "{{project_slug}}.{{pipeline_slug}}" # take a look at the setup.py entry_points section for details on how to define an entrypoint
-              parameters: ["--conf-file", "file:fuse://{{project_slug}}/{{pipeline_slug}}/conf/tasks/sample_etl_config.yml", "--env", ""]
-      # #############################################################
-      # # this is an example multitask job with notebook task       #
-      # #############################################################
-      # - name: "{{project_name}}-sample-multitask"
-      #   job_clusters:
-      #     - job_cluster_key: "default"
-      #       <<: *basic-static-cluster
-      #   tasks:
-      #     - task_key: "etl"
-      #       job_cluster_key: "default"
-      #       spark_python_task:
-      #         python_file: "file://{{project_slug}}/tasks/sample_etl_task.py"
-      #         parameters: [ "--conf-file", "file:fuse://conf/tasks/sample_etl_config.yml" ]
-      #     - task_key: "ml"
-      #       depends_on:
-      #         - task_key: "etl"
-      #       job_cluster_key: "default"
-      #       python_wheel_task:
-      #         package_name: "{{project_slug}}"
-      #         entry_point: "ml"
-      #         parameters: [ "--conf-file", "file:fuse://conf/tasks/sample_ml_config.yml" ]
-      #     ###############################################################################
-      #     # this is an example task based on the notebook                               #
-      #     # Please note that first you'll need to add a Repo and commit notebook to it. #
-      #     ###############################################################################
-      #     - task_key: "notebook"
-      #       deployment_config:
-      #         no_package: true # we omit using package since code will be shipped directly from the Repo
-      #       depends_on:
-      #         - task_key: "ml"
-      #       job_cluster_key: "default"
-      #       notebook_task:
-      #         notebook_path: "/Repos/Staging/{{project_slug}}/notebooks/sample_notebook"
-
-
+              entry_point: "{{project_slug}}.{{pipeline_slug}}.sqlTask" # take a look at the setup.py entry_points section for details on how to define an entrypoint
+              parameters: ["--conf-file", "file:fuse://{{project_slug}}/{{pipeline_slug}}/conf/tasks/etl_sqlRaw_config.yml", "--env", ""]
+          - task_key: "segmentation"
+            job_cluster_key: "default"
+            python_wheel_task:
+              package_name: "{{project_slug}}"
+              entry_point: "{{project_slug}}.{{pipeline_slug}}.pythonTask" # take a look at the setup.py entry_points section for details on how to define an entrypoint
+              parameters: ["--conf-file", "file:fuse://{{project_slug}}/{{pipeline_slug}}/conf/tasks/etl_segmentation_config.yml", "--env", ""]
+            depends_on:
+              - task_key: "etl_raw"
+          - task_key: "sql_sequential"
+            job_cluster_key: "default"
+            python_wheel_task:
+              package_name: "{{project_slug}}"
+              entry_point: "{{project_slug}}.{{pipeline_slug}}.sqlTask" # take a look at the setup.py entry_points section for details on how to define an entrypoint
+              parameters: ["--conf-file", "file:fuse://{{project_slug}}/{{pipeline_slug}}/conf/tasks/etl_sqlSequential_config.yml", "--env", ""]
+            depends_on:
+              - task_key: "segmentation"   
